Implement MultiSpectralRefiner
based/adapted from https://www.biorxiv.org/content/10.1101/2022.10.10.511642